fixes back batton visibile for ios, fixes trannsform on click

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -5,13 +5,10 @@ html, body {
     padding: 0px;
     -ms-touch-action: pan-y;
     -ms-user-select:none;
-
+    otline:none;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-user-modify: read;
     -webkit-user-select:none;
-    -webkit-user-modify: read-write-plaintext-only;
-}
-
-html {
     background: white;
 }
 
@@ -109,10 +106,10 @@ h6
 }*/
 
 div.item:active,
+div.item:hover,
 div.item:focus
 {
     transform: perspective(400px) rotate3d(1, -10, 0, 10deg);
-
     -webkit-transform: perspective(400px) rotate3d(1, -10, 0, 10deg);
 }
 
@@ -120,7 +117,7 @@ div.item:focus
     position: relative;
 }
 
-.btn-primary {
+.btn {
     z-index: 1000;
 }
 
@@ -136,3 +133,17 @@ div.item:focus
 .buttonsBar{
   margin-top: 15px;
 }
+
+.backButton
+{
+    display: none;
+}
+
+
+@media screen { @media (min-width: 0px) {
+    .backButton
+    {
+       display:inline;
+    }
+}}
+
